fixed font sizes on smaller screens

--- a/css/events.css
+++ b/css/events.css
@@ -17,14 +17,26 @@ body, html, #app {
   color: #333333;
 }
 
+.gallery-tile .picture-info h2 {
+  font-family: 'Oswald';
+  font-size: 2rem;
+  font-weight: 300;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+}
+
 @media screen and (min-width: 768px) {
   .eventsSection {
     font-size: 16px;
   }
+
 }
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 1200px) {
   .eventsSection {
     font-size: 18px;
+  }
+  .gallery-tile .picture-info h2 {
+    font-size: 3.5rem;
   }
 }
 @media screen and (min-width: 1440px) {
@@ -84,13 +96,7 @@ body, html, #app {
 .gallery-tile .picture-info > * {
   margin: 0.5rem 1.25rem;
 }
-.gallery-tile .picture-info h2 {
-  font-family: 'Oswald';
-  font-size: 3.5rem;
-  font-weight: 300;
-  text-transform: uppercase;
-  letter-spacing: 0.1em;
-}
+
 .gallery-tile:hover img {
   -webkit-transform: scale(1.1);
           transform: scale(1.1);
